<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/TextBg">

    <TextView
        android:id="@+id/hintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_title"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/hintTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_placeholder"
        android:textSize="18sp"
        android:padding="16dp"
        android:background="@color/backgroundBlue"
        android:layout_marginBottom="24dp"
        />

    <Button
        android:id="@+id/backToQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_quiz"
        android:backgroundTint="@color/backgroundBlue"/>

</LinearLayout>