<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/TextBg">

    <TextView
        android:id="@+id/finalScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_score_0_0"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/backgroundBlue"/>

    <ImageView
        android:id="@+id/imagescore"
        android:layout_width="0dp"
        android:layout_height="258dp"
        app:layout_constraintBottom_toTopOf="@+id/finalScoreText"
        app:layout_constraintEnd_toEndOf="@+id/finalScoreText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/finalScoreText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="114dp"
        android:text="Finish"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalScoreText"
        android:backgroundTint="@color/blue"/>

    <Button
        android:id="@+id/emailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/email_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishButton"
        app:layout_constraintVertical_bias="0.186"
        android:backgroundTint="@color/backgroundBlue"/>

    <Button
        android:id="@+id/ViewScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundBlue"
        android:text="@string/view_answers"
        app:layout_constraintBottom_toTopOf="@+id/finishButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalScoreText"
        app:layout_constraintVertical_bias="0.162" />

</androidx.constraintlayout.widget.ConstraintLayout>